# taskgraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/manifest/: vcpkg.json
.github/workflows/: macos-12.yml  ubuntu-20.04.yml  windows-2019.yml
cmake/: taskgraphConfig.cmake
core/: CMakeLists.txt  taskgraphCoreConfig.cmake.in
core/include/: ConnectionInfo.hpp  Controller.hpp  Graph.hpp  Node.hpp  NodeData.hpp  taskgraph.hpp
core/src/: Controller.cpp  Graph.cpp  Node.cpp
examples/: CMakeLists.txt
examples/cv/: CMakeLists.txt  CvNode.cpp  CvNode.hpp  CvNodeData.hpp  ImageReaderNode.cpp  ImageReaderNode.hpp  MatchTemplateNode.cpp  MatchTemplateNode.hpp  main.cpp
examples/pcl/: CMakeLists.txt  PclNode.cpp  PclNode.hpp  PclNodeData.hpp  PointCloudReaderNode.cpp  PointCloudReaderNode.hpp  PointCloudWriterNode.cpp  PointCloudWriterNode.hpp  main.cpp
examples/simple/: AddNode.cpp  AddNode.hpp  CMakeLists.txt  IntNode.cpp  IntNode.hpp  IntNodeData.hpp  main.cpp
ui/: CMakeLists.txt  Ui.hpp  UiBase.hpp  taskgraphUiConfig.cmake.in
